--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - DD_LOGS_ENABLED=true
       - DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL=true
       - DD_PROCESS_AGENT_ENABLED=true
-      - DD_TAGS='env:ruby-shop'
+      - DD_TAGS='env:rubyshop'
     ports:
       - "8126:8126"
     volumes:
@@ -23,7 +23,7 @@ services:
       - FLASK_DEBUG=1
       - POSTGRES_PASSWORD
       - POSTGRES_USER
-      - DATADOG_SERVICE_NAME=discounts-service
+      - DATADOG_SERVICE_NAME=discountsservice
       - DATADOG_TRACE_AGENT_HOSTNAME=agent
       - DD_LOGS_INJECTION=true
       - DD_ANALYTICS_ENABLED=true
@@ -37,7 +37,7 @@ services:
       - agent
       - db
     labels:
-      com.datadoghq.ad.logs: '[{"source": "python", "service": "discounts-service"}]'
+      com.datadoghq.ad.logs: '[{"source": "python", "service": "discountsservice"}]'
   frontend:
     environment:
       - DATADOG_TRACE_AGENT_HOSTNAME=agent
@@ -64,7 +64,7 @@ services:
       - FLASK_DEBUG=1
       - POSTGRES_PASSWORD
       - POSTGRES_USER
-      - DATADOG_SERVICE_NAME=advertisements-service
+      - DATADOG_SERVICE_NAME=advertisementsservice
       - DATADOG_TRACE_AGENT_HOSTNAME=agent
       - DD_LOGS_INJECTION=true
       - DD_ANALYTICS_ENABLED=true
@@ -78,7 +78,7 @@ services:
       - agent
       - db
     labels:
-      com.datadoghq.ad.logs: '[{"source": "python", "service": "ads-service"}]'
+      com.datadoghq.ad.logs: '[{"source": "python", "service": "adsservice"}]'
   db:
     image: postgres:11-alpine
     restart: always
